--- a/css/contato.css
+++ b/css/contato.css
@@ -2,7 +2,49 @@
 /* ARQUIVO: contato.css
 /* DESCRIÇÃO: Estilos exclusivos para o formulário da página de contato.
 /* ================================================================== */
+form {
+    max-width: 500px;
+    width: 95%;
+    margin: auto;
+    background-color: whitesmoke;
+    padding: 1rem;
+    border-radius: 10px;
+}
 
-/* Estilo do container do formulário */
+form div {
+    margin-top: 1rem;
+}
 
-/* Continuar digitação (deste ponto) */
+input:not([type="radio"]):not([type="checkbox"]),
+select,
+textarea {
+    width: 100%;
+    height: 40px;
+    border: none;
+    padding: 0 10px;
+    box-shadow: rgba(82, 76, 76, 0.5) 0 0 2px inset;
+    border-radius: 5px;
+}
+
+textarea {
+    height: auto;
+    padding: 10px;
+}
+
+button[type="submit"] {
+    background-color: #000;
+    color: #fff;
+    border: none;
+    padding: 1rem;
+    font-weight: bold;
+    margin-top: 1rem;
+    width: 100%;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+button[type="submit"]:hover,
+button[type="submit"]:focus {
+    background-color: rgb(82, 76, 76);
+}
