--- a/css/style.css
+++ b/css/style.css
@@ -9,4 +9,111 @@
 
 /* Reset básico para garantir consistência entre navegadores */
 
-/* Continuar digitação (deste ponto) */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+html {
+    font-size: 14px;
+}
+body {
+    background-color: white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+a {
+    /* Remove sublinhado */
+    text-decoration: none;
+}
+img {
+    max-width: 100%;
+}
+
+/* Layout principal */
+.limitador {
+    /* Largura máxima */
+    max-width: 1100px;
+    width: 95vw;
+    margin: auto; /* Centraliza */
+}
+header {
+    background-color: white;
+    position: sticky;
+    top: 0;
+    z-index: 9;
+}
+header .limitador {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/* Logo */
+h1 {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+}
+h1 a {
+    color: white;
+    background-color: black;
+    padding: 0.3rem 1rem;
+    border-radius: 5px;
+}
+
+/* nav (menu) */
+nav {
+    width: 65%;
+}
+.menu {
+    list-style: none;
+}
+.menu a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: black;
+}
+.menu a:hover,
+.menu a:active {
+    background-color: gainsboro;
+    border-radius: 20px 0 20px 0;
+    transition-duration: 0.2s;
+}
+
+/* Rodapé */
+footer {
+    background-color: black;
+    color: white;
+    font-weight: bold;
+    text-align: center;
+    height: 10vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
+/* ________________________________________ */
+/* Responsividade */
+/* Estilo para telas MAIORES que 768px (tablets e desktops */
+@media screen and (min-width: 768px) {
+    html {
+        font-size: 18px;
+    }
+    header .limitador {
+        height: 15vh;
+    }
+    .menu {
+        display: flex;
+        justify-content: space-between;
+    }
+    .menu a {
+        padding: 0 1rem;
+    }
+}
